# MyC-Compiler

./: CMakeLists.txt  README.md  node.h
documents/: report.md
src/: CodeGen.cpp  CodeGen.h  Makefile  lex.yy.cc  main.cpp  node.cpp  node.h  parser.cpp  parser.hpp  parser.y  token.l
test/fib/: fib.c  fib.ll
test/multi/: multi.c  multi.ll
test/quicksort/: quick.ll  quicksort.c
visualization/: AST.json
visualization/json2tree/: json2tree.html
